Revision history for Perl extension Workflow

# $Id: Changes 375 2008-04-22 19:54:42Z jonasbn $

0.32_2 Sun Apr 20 20:37:56 CEST 2008 (update not required)

- This is yet another developer release introducing a more fine grained control 
  of the auto commit feature, implemented by Jim Brandt, we are very interested 
  in feedback on this release, so please consider joining the mailing list or send 
  feedback to jonasbn@cpan.org directly.

- The auto_commit feature is however still defaulting to enabled to 
  respect backwards compatibility and the control is experimental, hence the
  developer release

  The example application in eg/ seemed to have some issues, these have been 
  addressed also
 
	Updated:
		eg/ticket/App/Condition/IsWorker.pm
		eg/ticket/ticket.pl
		lib/Workflow.pm
		lib/Workflow/Persister/DBI.pm
		lib/Workflow/Factory.pm
		lib/Workflow/Persister.pm
		  
	Added:
		t/persister_dbi_sqlite.t
		t/TestDBUtil.pm


0.32_1 Sun Apr  6 09:02:42 CEST 2008 (update not required)

- This is a developer release introducing typed condition, implemented by 
  Jim Brandt, we are very interested in feedback on this release, so please
  consider joining the mailing list or send feedback to jonasbn@cpan.org 
  directly.

- Typed conditions makes it possible for different workflows to hold 
  unique methods for workflow steps even with names colliding.
  
  Example workflow foo and bar can have a condition baz, but baz are two 
  different implementations in foo and bar respectively 

	Updated:
		t/cached_conditions.t
		t/factory.t
		t/state.t
		t/TestUtil.t
		t/condition.t
		t/workflow_type.t
		t/config.t
		t/workflow.t

		Workflow		
		Workflow::Factory
		Workflow::Config
		Workflow::Config::XML
		Workflow::Config::Perl
		Workflow::Action
		Workflow::State
		Workflow::Condition
		Workflow::Persister::DBI
		Workflow::History
		Workflow::Persister::SPOPS

	Introduced
		t/state_perl.t
		t/TestApp/Action/TicketCreateType.pm
		t/TestApp/Condition/HasUserType.pm