@@ -1,6 +1,12 @@
 Revision history for Perl extension Workflow
 
-# $Id: Changes 375 2008-04-22 19:54:42Z jonasbn $
+# $Id: Changes 380 2008-07-29 20:36:32Z jonasbn $
+
+HEAD
+
+- Fixed minor bug in error message in: Workflow::State, reported
+  by Robert Stockdale, RT #38023
+
 
 0.32_2 Sun Apr 20 20:37:56 CEST 2008 (update not required)
 
